[gd_scene load_steps=7 format=3 uid="uid://bylhfbpma41vf"]

[ext_resource type="Script" path="res://scenes/main_glsl_marching_cubes.gd" id="1_5lhal"]
[ext_resource type="Script" path="res://addons/marching_cubes_viewer/scenes/controls/glsl/marching_cubes_viewer_glsl.gd" id="2_ar68c"]
[ext_resource type="PackedScene" uid="uid://bk62samj5dspq" path="res://scenes/controls/trackball_tumbler.tscn" id="2_vbpbm"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_25jua"]

[sub_resource type="Sky" id="Sky_icpay"]
sky_material = SubResource("ProceduralSkyMaterial_25jua")

[sub_resource type="Environment" id="Environment_1y15q"]
background_mode = 1
sky = SubResource("Sky_icpay")

[node name="TestGlslMarchingCubes" type="Node3D"]
script = ExtResource("1_5lhal")

[node name="MarchingCubesViewerGlsl" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
script = ExtResource("2_ar68c")
image_file = "res://art/iguana/Iguana_png.zip"
threshold = 0.474

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1y15q")

[node name="trackball_tumbler" parent="." instance=ExtResource("2_vbpbm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.52444)

[node name="Camera3D" type="Camera3D" parent="trackball_tumbler"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="trackball_tumbler"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 74.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Threshold"

[node name="slider_threshold" type="HSlider" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Resolution"

[node name="slider_resolution" type="HSlider" parent="Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.1

[node name="bn_load" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Load Image Stack"

[node name="bn_save" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Export Mesh"

[node name="load_dialog" type="FileDialog" parent="Control"]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.zip")

[node name="save_dialog" type="FileDialog" parent="Control"]
unique_name_in_owner = true
position = Vector2i(0, 36)
size = Vector2i(600, 400)
access = 2
filters = PackedStringArray("*.glb,*.gltf")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.980416, 7.30467e-09, 0.196939, 0.097354, 0.869271, 0.484655, -0.171193, 0.494336, -0.852247, 0, 3.85286, 0)
light_color = Color(0.447059, 0.556863, 0.65098, 1)

[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/slider_threshold" to="." method="_on_slider_threshold_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer2/slider_resolution" to="." method="_on_slider_resolution_value_changed"]
[connection signal="pressed" from="Control/VBoxContainer/bn_load" to="." method="_on_bn_load_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/bn_save" to="." method="_on_bn_save_pressed"]
[connection signal="file_selected" from="Control/load_dialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="file_selected" from="Control/save_dialog" to="." method="_on_save_dialog_file_selected"]
